<resources>
    <string name="app_name">RPSDroid</string>
    <string name="splash_screen_logo">splash_screen_logo</string>
    <string name="npc_play_image">npc_play_image</string>
    <string name="own_play_image">own_play_image</string>
    <string name="win">Victory!</string>
    <string name="lose">Lose!</string>
    <string name="draw">Draw!</string>
    <string name="you">YOU</string>
    <string name="coin_icon">coin_icon</string>
    <string name="classic_icon_button">classic_icon_button</string>
    <string name="special_icon_button">special_icon_button</string>
    <string name="menu_classicButton">Classic Mode</string>
    <string name="menu_specialButton">Special Mode</string>
    <string name="btnChangeColor">Change color</string>
    <string name="txtChangeColor">10</string>
    <string name="img_shop_changecolor">img_shop_changecolor</string>
    <string name="img_shop_changecolor_coin">img_shop_changecolor_coin</string>
</resources>
