<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_shop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    tools:context="com.jmedinilla.rpsdroid.ShopGame_Activity">

    <LinearLayout
        android:id="@+id/layout_shop_changecolor"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/icon_color"
            android:id="@+id/imgChangecolor"
            android:layout_weight="1"
            android:contentDescription="@string/img_shop_changecolor" />

        <Button
            android:onClick="getOnClickShopButton"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/btnChangeColor"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:id="@+id/btnChangecolor"
            android:layout_weight="1" />

        <TextView
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:text="@string/txtChangeColor"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:id="@+id/txtChangecolor"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            app:srcCompat="@drawable/money_icon"
            android:id="@+id/imgChangecolorCoin"
            android:layout_weight="1"
            android:contentDescription="@string/img_shop_changecolor_coin" />
    </LinearLayout>
</RelativeLayout>
